fixed overflow on site

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
     justify-content: start;
     align-items:center;
     margin: auto; 
-    
+    overflow: hidden;
     height: 100vh; 
 }
 
